Code refactore to work well with JWT